tests/ui/closures/print/closure-print-generic-1.stderr
error[E0382]: use of moved value: `c`
  --> $DIR/closure-print-generic-1.rs:17:5
   |
LL |     let c = to_fn_once(move || {
   |         - move occurs because `c` has type `{closure@$DIR/closure-print-generic-1.rs:12:24: 12:31}`, which does not implement the `Copy` trait
...
LL |     c();
   |     --- `c` moved due to this call
LL |     c();
   |     ^ value used here after move
   |
note: this value implements `FnOnce`, which causes it to be moved when called
  --> $DIR/closure-print-generic-1.rs:16:5
   |
LL |     c();
   |     ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
